---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 04. 03. 2023
  Balancing:
    - Increased mining radius of advanced burner mining drill to make building new mining setups easier.  This may break existing mining setups if you have mixed ores.
    - MilitarySupply: Tweaked the amount of items requested per order.
    - MilitarySuuply: Armor upgrades no longer grant inventory size bonuses.  Reduced the prices of the upgrades to compensate.
  Changes:
    - Tweaked some descriptions and some dialogue for the scenario.
    - MilitarySupply: Research is now disabled for all forces, not just the player's force.  I expect this never to be relevant.
    - MilitarySupply: The day-night cycle now has a period of 15 minutes.
    - MilitarySupply: Choosing the combat starter package now gives an armor with nightvision equipment installed.
    - MilitarySupply: Overhauled various parts of the code.  Most of you won't care, but I did it anyways.
  Gui:
    - MilitarySupply: Completely redesigned most of the GUIs in the scenario.
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 18. 12. 2020
  Changes:
    - Updated for Factorio version 1.1.
  Balancing:
    - Burner Automation technology doesn't cost any more in marathon mode--this helps to set up production quicker.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 04. 07. 2020
  Changes:
    - Changed the default setting for the option of module slots in burner machines.  Now it is disabled by default.
  Bugfixes:
    - Fixed that since the electric mining drill update, the Advanced Burner Mining drill wouldn't show the proper graphics when it was mining with a fluid.  Now it's fixed, & it shows the proper graphics.
---------------------------------------------------------------------------------------------------