@@ -39,20 +39,16 @@ thoughts-speed-health-bonus=[color=0, 0.8, 0]Wow!  These new DuraShoe+ SuperShoe
 thoughts-unlock-bam-2=[color=0, 0.8, 0]I figured out how to build an assembling machine that will be much faster than anything I already have.[/color]
 thoughts-unlock-capsules=[color=0, 0.8, 0]I heard these make some people really angry, something about morality?  ...  Okay, my boss just told me it's not important?  Why?[/color]
 thoughts-unlock-car=[color=0, 0.8, 0]It's an old-school car like they had in the 19th-22nd centuries.  It runs on 4 wheels instead of hovering.[/color]
-thoughts-unlock-circuit-network=[color=0, 0.8, 0]Now I can fine-tune my production to suit my needs.  With these combinators, I could do almost anything![/color]
 thoughts-unlock-concrete=[color=0, 0.8, 0]I can now build a nice concrete factory floor.  I can get the water I need from that lake in the starting area.[/color]
 thoughts-unlock-electricity-1=[color=0, 0.8, 0]Ahhh...nice to be back in the Electric Age.  And lamps!  Now I can see better at night.[/color]
 thoughts-unlock-electricity-2=[color=0, 0.8, 0]Assembling machines, electric mining drills...what's this?  Instructions on how to build big electric poles and radars?  Thank you![/color]
 thoughts-unlock-fast-inserter=[color=0, 0.8, 0]Filter inserters!  Now I can build an advanced sorting depot.  If I need one.[/color]
 thoughts-unlock-grenade=[color=0, 0.8, 0]These grenades pack enough punch to rip holes in Seplurian steel.[/color]
 thoughts-unlock-heavy-armor=[color=0, 0.8, 0]They want this armor to become standard-issue for all Imperial soldiers, but it's quite expensive to craft.[/color]
-thoughts-unlock-laser-turret=[color=0, 0.8, 0]These are amazing!  I just wish they weren't such power hogs...[/color]
-thoughts-unlock-light-armor=[color=0, 0.8, 0]Iron armor.  It's not as strong as steel armor, but pretty effective if you ask me.[/color]
 thoughts-unlock-piercing-ammo=[color=0, 0.8, 0]This new ammunition should be strong enough to penetrate the Seplurian defenses.[/color]
 thoughts-unlock-red-belt=[color=0, 0.8, 0]The Empress will be glad to hear that I'm increasing the speed of my factory, won't she?[/color]
 thoughts-unlock-repair=[color=0, 0.8, 0]Now I can fix any damaged turrets or walls I may have.[/color]
 thoughts-unlock-smg=[color=0, 0.8, 0]These are much, much better than my old pistol.  They are standard-issue for Imperial soldiers. ... Why didn't they give one to me?[/color]
-thoughts-unlock-solar-panel=[color=0, 0.8, 0]Nearly unlimited free, clean solar energy...all I need is space.  Also I should probably clean them after every sandstorm.[/color]
 thoughts-unlock-steel-furnace=[color=0, 0.8, 0]They said I'm doing an okay job, but I need to work faster.  With these furnaces I can double my iron plate production.[/color]
 thoughts-unlock-sulfur1=[color=0, 0.8, 0]Sulfur is used to make items like batteries.  These definitely have military applications.[/color]
 thoughts-unlock-sulfur2=I can get the sufur I need from the SUPPLY DROPOFF CHEST.
@@ -133,7 +129,6 @@ wall=Stone Wall
 advanced-oil-processing=Advanced Oil Processing\nOil Cracking
 bam-2=Burner Assembling Machine 2\nEngine Unit
 repair=Repair Pack
-light-armor=Light Armor
 heavy-armor=Heavy Armor
 turret=Gun Turret
 bullet-bonus-1=+15% Damage\n+10% Firerate
@@ -148,16 +143,13 @@ electricity-2=Assembling Machine 1\nElectric Mining Drill
 capsules=Poison Capsule\nDefender Capsule
 fast-belts=Fast Belts
 fast-inserter=Fast Inserter\nFilter Inserter
-circuit-network=Circuit Network
 grenade-bonus-1=+25% Damage
 grenade-bonus-2=+35% Damage
 concrete=Concrete\nHazard Concrete
-solar-panel=Solar Panel\nAccumulator
 follower-count-bonus=+10 Follower Robots
 mining-prod-1=+4% Mining Productivity
 inserter-stack-bonus=+2 Inserter Stack Size
 money-bonus=x2 Goal Reward\nx2 Score
 iron-sticks-gear=Iron Sticks Gear
 better-cable-making=Better Cable Making
-laser-turret=Laser Turret
 sulfur=Sulfur Processing\nBatteries
