@@ -231,20 +231,16 @@ script.on_init( function()
 	add_message_to_scenario_object( mS, "thoughts-unlock-bam-2" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-capsules" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-car" )
-	add_message_to_scenario_object( mS, "thoughts-unlock-circuit-network" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-concrete" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-electricity-1" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-electricity-2" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-fast-inserter" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-grenade" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-heavy-armor" )
-	add_message_to_scenario_object( mS, "thoughts-unlock-laser-turret" )
-	add_message_to_scenario_object( mS, "thoughts-unlock-light-armor" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-piercing-ammo" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-red-belt" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-repair" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-smg" )
-	add_message_to_scenario_object( mS, "thoughts-unlock-solar-panel" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-steel-furnace" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-sulfur1", 240, "thoughts-unlock-sulfur2" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-sulfur2" )
